--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Open Graph tags (for WhatsApp/Facebook preview) -->
   <meta property="og:title" content="Tap to Chat on WhatsApp" />
   <meta property="og:description" content="Click this card to chat with us directly on WhatsApp." />
-  <meta property="og:image" content="https://dev694.github.io/WHATSAPP_IMAGE//image.jpg" />
+  <meta property="og:image" content="https://dev694.github.io/WHATSAPP_IMAGE/image.jpg" />
   <meta property="og:url" content="https://dev694.github.io/WHATSAPP_IMAGE/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -25,3 +25,4 @@
   </p>
 </body>
 </html>
+
