--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Chat with us on WhatsApp</title>
 
   <!-- Open Graph tags (for WhatsApp/Facebook preview) -->
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="Tap to Chat on WhatsApp" />
   <meta property="og:description" content="Click this card to chat with us directly on WhatsApp." />
   <meta property="og:image" content="https://dev694.github.io/WHATSAPP_IMAGE/image.jpg" />
@@ -25,4 +26,5 @@
   </p>
 </body>
 </html>
+
 
